--- a/AppView/Shared/NavMenu.razor
+++ b/AppView/Shared/NavMenu.razor
@@ -21,17 +21,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> None
             </NavLink>
         </div>        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="userview">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> ListUser
-            </NavLink>
-        </div>    
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="update-user">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> UpdateUser
             </NavLink>
         </div>        
         <div class="nav-item px-3">
